[package]
name = "delfi"
version = "0.1.0"
authors = ["Neptunian <neptunian.hacker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_derive = "1.0.125"
warp = "0.3.1"
hyper = "0.14.7"
futures = "0.3.14"
tokio = { version = "1.5.0", features = [ "full" ] }